methods.returning.MethodsReturning.scala.code
var vuBiscuit = false
def haveBaggle():Boolean = {
  for (j<-1 to 7) {
    for (i<-1 to 7) {
      if (estSurBiscuit) {
        vuBiscuit=true
      }
      avance()
    }
    if (vuBiscuit==true) {
      return true
    } else {
    gauche()
    avance()
    droite()
    }
  }
}